# faco_etl

./: .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  LICENSE  PRESENTACION_RAPIDA.md  PRESENTATION_GUIDE.md  PRODUCTION_READY.md  README.md  debug_imports.py  docker-compose.yml  main.py  presentation_express.py  pyproject.toml  quick_start.py  requirements-dev.txt  requirements.txt  setup.py  setup.sh  setup_local.sh  test_fixes.sh  validate.sh  validate_etl.py
database/: README.md  README_SOLUCION_ERROR.md  RESUMEN_ARCHIVOS.md  crear_tablas_esenciales.sql  ddl_faco_tables_vencimiento_dimension.sql  ddl_tablas_salida.sql  implementation_plan_vencimiento.sql  migrate_vencimiento_dimension.sql
scripts/: crear_tablas_faco.sh  ejecutar_etl_presentacion.sh
src/core/: __init__.py  config.py  logger.py  orchestrator.py
src/etl/: __init__.py  business_days.py  extractor.py  loader.py  queries.py  transformer.py
stored_procedures/: sp_faco_etl_final_optimizado.sql  sp_faco_etl_looker_final_fixed.sql  sp_faco_etl_looker_optimized.sql  sp_faco_etl_looker_optimized_fixed.sql  sp_faco_etl_vencimiento_dimension.sql
tests/: __init__.py  test_basic.py  test_validation.py
