[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faco-etl"
version = "0.1.0"
description = "ETL Python para análisis de gestión de cobranza - BigQuery to Looker Studio"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "FACO ETL Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "google-cloud-bigquery>=3.15.0",
    "pandas>=2.1.4",
    "numpy>=1.26.0",
    "holidays>=0.36",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "click>=8.1.6",
    "loguru>=0.7.2",
    "pydantic>=2.5.0",
    "pyarrow>=14.0.0",
    "pathlib>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.7.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "watchdog>=3.0.0",
    "jupyter>=1.0.0",
    "ipdb>=0.13.13",
    "pre-commit>=3.3.3",
]

[project.scripts]
faco-etl = "main:main"

[project.urls]
Homepage = "https://github.com/reyer3/faco_etl"
Repository = "https://github.com/reyer3/faco_etl"
Issues = "https://github.com/reyer3/faco_etl/issues"

# Fix for hatchling - specify where packages are located
[tool.hatch.build.targets.wheel]
packages = ["src"]
include = [
    "main.py",
    "src/**/*.py",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/main.py",
    "/requirements.txt",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--cov=src --cov-report=html --cov-report=term-missing"
